# IReader

./: .config.kiro  .fdroidignore  .gitignore  .kilocodemodes  .kiroignore  ADD_REPOSITORY_FEATURE_COMPLETE.md  ADVANCED_READER_SECURITY_IMPLEMENTATION.md  ADVANCED_SETTINGS_IMPLEMENTATION_SUMMARY.md  BACK_BUTTON_FIXES.md  BOOK_DETAIL_COMPILATION_FIX_SUMMARY.md  BOOK_DETAIL_ENHANCED_COMPLETE.md  BOOK_DETAIL_ENHANCED_FIXES.md  BOOK_DETAIL_FIXES_SUMMARY.md  BOOK_DETAIL_MIGRATION_FIXES.md  BOOK_DETAIL_SCREEN_NEW_FIX.md  BUG_FIXES_IMPLEMENTATION_GUIDE.md  BUG_FIXES_SUMMARY.md  BUILD_FIXES_APPLIED.md  BUILD_FIX_FINAL_STATUS.md  BUILD_FIX_PROGRESS.md  BUILD_FIX_SUMMARY.md  BUILD_NATIVE_LIBS.md  BUILD_OPTIMIZATION_GUIDE.md  BUILD_SPEED_IMPROVEMENTS.md  BUILD_SUCCESS_SUMMARY.md  CODE_ANALYSIS_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  COMPILATION_ERRORS_FIXED.md  COMPILATION_ERRORS_FIX_GUIDE.md  COMPILATION_ERRORS_REMAINING.md  COMPILATION_FIXES_APPLIED.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_STATUS.md  CONTINUITY.md  CONTRIBUTING.md  COQUI_TTS_USAGE_EXAMPLE.kt  CRYPTO_DONATION_IMPLEMENTATION_SUMMARY.md  DATABASE_MIGRATION_FIX.md  DESKTOP_CIRCULAR_DEPENDENCY_ISSUE.md  (+124 more)
.github/: CHANGELOG_EXAMPLE.md  FUNDING.yml  RELEASE_TEMPLATE.md
.run/: Desktop.run.xml
agents/: README.md  architecture-refactoring.md  compose-ui-specialist.md  extension-source-builder.md  kmp-feature-developer.md  systematic-debugger.md
android/: .gitignore  build.gradle.kts  google-services.json  lint-baseline.xml  proguard-rules.pro  proguard-size-optimize.pro
android-compat/: build.gradle.kts  getAndroid.ps1
app/: build.gradle  build.gradle.kts  google-services.json  proguard-android-optimize.txt  proguard-project.txt  proguard-rules.pro
benchmark/: README.md  build.gradle.kts
buildSrc/: .gitignore  build.gradle.kts
common-data/: build.gradle.kts
common-extensions/: build.gradle.kts
common-models/: build.gradle.kts
common-resources/: build.gradle.kts
common_models/: build.gradle.kts
config/: detekt.yml
core/: build.gradle.kts  lint-baseline.xml
core-api/: .gitignore  build.gradle.kts  gradle.properties
core-apis/: build.gradle.kts
core-catalogs/: build.gradle.kts
core-ui/: build.gradle.kts
data/: build.gradle.kts
desktop/: APPIMAGE_SETUP_GUIDE.md  IReader-x86_64.AppImage.zsync  README.md  build.gradle.kts  proguard-rules.pro
docs/: ADVANCED_SYSTEM_FEATURES.md  AI_Translation_Guide.md  ARCHITECTURE.md  BOOKDETAIL_NAVIGATION_FIX.md  BROWSER_WALLET_INTEGRATION.md  BUILD_FIXES_APPLIED.md  BUILD_FIXES_COMPLETE.md  BUILD_ISSUES_SUMMARY.md  BUILD_OPTIMIZATION.md  CLOUDFLARE_COMMUNITY_TRANSLATIONS.md  CLOUDFLARE_R2_SETUP.md  CLOUDFLARE_SETUP.md  CODE_CONSOLIDATION_GUIDE.md  COMMUNITY_SOURCE.md  COMPILATION_FIXES_NEEDED.md  COMPOSE_HOT_RELOAD.md  CREATE_CUSTOM_THEMED_ICON.md  DEBUG_WALLET_CONNECTION.md  DEPENDENCIES.md  DEPENDENCIES_CONFIGURED.md  DESKTOP_WALLET_INTEGRATION.md  DESKTOP_WALLET_NOTE.md  DISCORD_CHARACTER_ART_SETUP.md  DISCORD_RICH_PRESENCE.md  EXPLORE_SCREEN_MIGRATION.md  GAMIFICATION_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  IOS_SETUP.md  IReader-Extensions-Migration-Plan.md  JS_PLUGIN_TESTING_GUIDE.md  KDOC_DOCUMENTATION_GUIDE.md  MIGRATION_LESSONS_LEARNED.md  MIHON_MIGRATION_PERFORMANCE_GUIDE.md  MODULE_DEPENDENCIES.md  NEW_ARCHITECTURE_GUIDE.md  OLLAMA_CLOUD_SETUP.md  OLLAMA_SETUP.md  OPTIMIZATION_CHANGELOG.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PIPER_TTS_PLUGIN_DESIGN.md  (+41 more)
domain/: build.gradle.kts  lint-baseline.xml
native/: .gitignore  BUILD_GUIDE.md  BUILD_PIPER_JNI.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  GET_PIPER_LIBRARIES.md  INDEX.md  INSTALL_COMPILER.md  QUICK_BUILD_REFERENCE.md  QUICK_START.md  README.md  TASK_1_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4_SUMMARY.md  build_dll.ps1  download_piper.ps1
native/cmake/: FindONNXRuntime.cmake  FindPiper.cmake  Platform.cmake
native/distribution/: README.md  cdn_config.yaml  deploy_cdn.sh  nginx_cdn.conf  update_server.py
native/docker/: Dockerfile.linux  Dockerfile.macos  Dockerfile.windows
native/docs/: MEMORY_OPTIMIZATION.md  QUICK_REFERENCE.md
native/examples/: memory_optimization_example.cpp
native/include/piper_jni/: audio_buffer_pool.h  error_handler.h  piper_jni.h  streaming_synthesizer.h  voice_manager.h  voice_model_cache.h
native/installers/: test_installers.sh
native/installers/linux/: build_deb.sh  build_rpm.sh  ireader.spec
native/installers/linux/debian/: control
native/installers/macos/: create_dmg.sh  entitlements.plist
native/installers/windows/: build_msi.ps1  ireader.wxs
native/licensing/: ATTRIBUTION.md  README.md  verify_licenses.sh  voice_license_template.json
native/qa/: README.md  manual_test_checklist.md  regression_test_suite.sh  run_full_test_suite.sh
native/release/: README.md  RELEASE_CHECKLIST.md  create_release.sh  publish_release.sh
native/scripts/: build_all.ps1  build_linux.sh  build_macos.sh  build_simple.ps1  build_windows.ps1  generate_checksums.ps1  setup_deps.sh  verify_build.ps1
native/src/jni/: audio_buffer.cpp  error_handler.cpp  piper_jni.cpp  streaming_synthesizer.cpp  voice_manager.cpp  voice_model_cache.cpp
native/src/wrapper/: piper_wrapper.cpp
native/test/: CMakeLists.txt  basic_test.cpp
(+8684 files in other folders)
